got my blogs to show up

--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -10,4 +10,16 @@
     <h1> thanks for the new post </h1>
   </body>
 
+  <hr>
+
+  {% for NewPost in NewPosts %}
+
+  <div class="NewPost">
+    <div class="new-post-title">{{NewPost.title}}</div>
+    <pre class="new-post-body">{{NewPost.NewPost}}</pre>
+  </div>
+
+  {% endfor %}
+  
+
 </html>
