--- a/templates/main_blog.html
+++ b/templates/main_blog.html
@@ -6,6 +6,7 @@
 
   <body>
     <h1> main blog </h1>
+    <p> <a href = "/"> Add Entry </a>  <a href = "/blog"> View Posts </a> </p>
 
     <form method="post">
 
@@ -24,8 +25,8 @@
       <input type="submit">
 
     </form>
-
-    
+{% block content %}
+{% endblock %}
 
   </body>
 
