--- a/templates/all_posts.html
+++ b/templates/all_posts.html
@@ -2,8 +2,9 @@
 
 <html>
 <body>
-  <p> <a href = "/"> Add Entry </a>  <a href = "/blog"> View Posts </a> </p>
 
+   <a href = "/"> Add Entry </a>  <a href = "/blog"> View Posts </a>
+<br>
 
   {% for NewPost in NewPosts %}
 
