--- a/templates/main_blog.html
+++ b/templates/main_blog.html
@@ -6,8 +6,9 @@
 
   <body>
     <h1> main blog </h1>
-    <p> <a href = "/"> Add Entry </a>  <a href = "/blog"> View Posts </a> </p>
 
+     <a href = "/"> Add Entry </a>  <a href = "/blog"> View Posts </a>
+  
     <form method="post">
 
       <label>
