--- a/templates/indiv_post.html
+++ b/templates/indiv_post.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-<p> <a href = "/"> Add Entry </a>  <a href = "/blog"> View Posts </a> </p>
+
+<a href = "/"> Add Entry </a>  <a href = "/blog"> View Posts </a> 
 
 <body>
 
